example/calculator-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mcg-mc-gravity-calculator
  name: mcg-mc-gravity-calculator
spec:
  replicas: 1
  strategy:
    activeDeadline: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 120
      updatePeriodSeconds: 1
    type: Rolling
  selector:
    matchLabels:
      app: mcg-mc-gravity-calculator
  template:
    metadata:
      labels:
        app: mcg-mc-gravity-calculator
    spec:  
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  terminationGracePeriodSeconds: 30 
  containers:
    - image: image-registry.openshift-image-registry.svc:5000/ised-registry/mcg-mc-gravity-calculator:dev
      imagePullPolicy: Always
      name: mcg-mc-gravity-calculator
      ports:
        - containerPort: 8080
          protocol: TCP
      resources:
        requests:
          memory: 64Mi
          cpu: 250
        limits:
          memory: 128
          cpu: 500m    
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
