example/calculator-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: mcg-mc-gravity-calculator
    app.kubernetes.io/component: mcg-mc-gravity-calculator
    app.kubernetes.io/instance: mcg-mc-gravity-calculator
    app.kubernetes.io/part-of: mcg-mc-gravity-calculator-app
  name: mcg-mc-gravity-calculator
  namespace: sbms-mc-mcg
spec:
  host: mcg-mc-gravity-calculator-sbms-mc-mcg.apps.dd-aro.eastus.aroapp.io
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mcg-mc-gravity-calculator
    weight: 100
  wildcardPolicy: None
